// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BaseSelect /> renders compact 1`] = `
<div
  className="fnvwjir"
>
  <FormInput
    compact={true}
    name="foo"
    onChange={[Function]}
    tagName="select"
  >
    <option
      value="bar"
    >
      Bar
    </option>
  </FormInput>
  <div
    className="fmc1kdd"
  >
    <IconCaretDown
      decorative={true}
      size="2em"
    />
  </div>
</div>
`;

exports[`<BaseSelect /> renders disabled 1`] = `
<div
  className="fnvwjir"
>
  <FormInput
    disabled={true}
    name="foo"
    onChange={[Function]}
    tagName="select"
  >
    <option
      value="bar"
    >
      Bar
    </option>
  </FormInput>
  <div
    className="f1gfa42q"
  >
    <IconCaretDown
      decorative={true}
      size="2em"
    />
  </div>
</div>
`;

exports[`<BaseSelect /> renders invalid 1`] = `
<div
  className="fnvwjir"
>
  <FormInput
    invalid={true}
    name="foo"
    onChange={[Function]}
    tagName="select"
  >
    <option
      value="bar"
    >
      Bar
    </option>
  </FormInput>
  <div
    className="f1je86nr"
  >
    <IconCaretDown
      decorative={true}
      size="2em"
    />
  </div>
</div>
`;
